--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,8 +37,9 @@ dependencies:
   google_sign_in: ^6.1.5
   shared_preferences: ^2.2.2
   social_login_buttons: ^1.0.7
-  molten_navigationbar_flutter: ^1.0.0
+  salomon_bottom_bar: ^3.3.2
   carousel_slider: ^4.2.1
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -57,6 +58,8 @@ flutter:
     - assets/logo-white.png
     - assets/logo-purple.png
     - assets/dummy-banner.jpg
+    - assets/icons/icon-google-maps.png
+    - assets/icons/icon-whatsapp.png
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
