--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   provider: ^6.0.5
   http: ^1.1.0
   firebase_auth:
+  cloud_firestore: ^4.12.2
   google_sign_in: ^6.1.5
   shared_preferences: ^2.2.2
   social_login_buttons: ^1.0.7
   salomon_bottom_bar: ^3.3.2
   carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.4.0
+  chat_bubbles: ^1.5.0
 
 dev_dependencies:
   flutter_test:
