--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -52,6 +52,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled = true
     }
 
     buildTypes {
@@ -69,4 +70,5 @@ flutter {
 
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.android.support:multidex:2.0.1'
 }
