--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,19 +31,23 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.2
   another_flutter_splash_screen:
   provider: ^6.0.5
   http: ^1.1.0
   firebase_auth:
+  firebase_core: ^2.24.0
   cloud_firestore: ^4.12.2
+  firebase_messaging: ^14.7.6
+  flutter_local_notifications:
   google_sign_in: ^6.1.5
-  shared_preferences: ^2.2.2
   social_login_buttons: ^1.0.7
   salomon_bottom_bar: ^3.3.2
   carousel_slider: ^4.2.1
   flutter_staggered_grid_view: ^0.4.0
   chat_bubbles: ^1.5.0
   custom_pop_up_menu: ^1.2.4
+  notification_permissions: ^0.6.1
 
 dev_dependencies:
   flutter_test:
