--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
+  ionicons: ^0.2.2
+  change_case: ^1.1.0
+  wave: ^0.2.2
   shared_preferences: ^2.2.2
   another_flutter_splash_screen:
   provider: ^6.0.5
@@ -51,8 +54,11 @@ dependencies:
   notification_permissions: ^0.6.1
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^9.1.0
+  intl_phone_field: ^3.2.0
   open_street_map_search_and_pick: ^0.1.0
   latlong2: ^0.8.1
+  url_launcher: ^6.2.2
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +85,7 @@ flutter:
     - assets/dummy-banner.jpg
     - assets/load.gif
     - assets/grayload.gif
+    - assets/images/default.jpg
     - assets/images/user.webp
     - assets/images/service.webp
     - assets/icons/icon-google-maps.png
