--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth:
   firebase_core: ^2.24.0
   cloud_firestore: ^4.12.2
+  firebase_storage: ^11.5.6
   firebase_messaging: ^14.7.6
   flutter_local_notifications:
   google_sign_in: ^6.1.5
@@ -59,6 +60,8 @@ dependencies:
   latlong2: ^0.8.1
   url_launcher: ^6.2.2
   google_fonts: ^4.0.4
+  image_picker: ^1.0.5
+  flutter_carousel_widget: ^2.2.0
 
 dev_dependencies:
   flutter_test:
