--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,9 @@ flutter:
   assets:
     - assets/logo-white.png
     - assets/logo-purple.png
-    - assets/dummy-banner.jpg
+    - assets/banner1.png
+    - assets/banner2.png
+    - assets/banner3.png
     - assets/load.gif
     - assets/grayload.gif
     - assets/images/default.jpg
